--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "monaco-editor": "^0.44.0",
+    "vue": "^3.2.13",
+    "vue-jss": "^0.0.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -21,6 +23,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "jss-preset-default": "^10.10.0",
     "lint-staged": "^11.1.2",
     "typescript": "~4.5.5"
   },
